# ajk-lomake

./: .gitignore  .gitmodules  .travis.meta.yml  .travis.yml  Dockerfile  Makefile  README.md  ajk-lomake.cabal  cabal.project  install.sh  package.yaml  stack-lts-5.yaml  stack.yaml  style.css  tajna.yaml
src/: Lomake.hs
src/Lomake/: Digest.hs  PDF.hs  Pretty.hs
src/SatO/AJK/: Lomake.hs
src/SatO/AJK/Lomake/: Asuntohaku.hs  Classes.hs  Common.hs  Huoltoilmoitus.hs  LongText.hs  Palaute.hs  Sisainen.hs  Sisanen.hs  Uusinta.hs
src/Singleton/: Bool.hs
srv/: Main.hs
