cabal-version:  2.2
name:           ajk-lomake
version:        0

synopsis:       AJK form
description:    Jee jee jee
category:       Web

homepage:       https://github.com/osakunta/ajk-lomake#readme
bug-reports:    https://github.com/osakunta/ajk-lomake/issues
author:         Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:     Oleg Grenrus <oleg.grenrus@iki.fi>
license:        BSD-3-Clause
license-file:   LICENSE
build-type:     Simple
tested-with:    GHC==8.4.4

extra-source-files:
    README.md

source-repository head
  type: git
  location: https://github.com/osakunta/ajk-lomake

library
  hs-source-dirs:
      src
  ghc-options: -Wall
  build-depends:
      base                  ^>=4.11.1.0
    , aeson
    , aeson-compat
    , base-compat
    , bifunctors
    , blaze-html
    , bytestring
    , containers
    , either
    , file-embed
    , futurice-prelude
    , generics-sop
    , http-api-data
    , http-client
    , http-client-tls
    , http-types
    , HPDF
    , lens
    , lucid
    , markdown
    , mime-mail
    , mtl
    , pretty
    , reflection
    , semigroups
    , servant
    , servant-lucid
    , servant-server
    , stm
    , tagged
    , text
    , time
    , transformers
    , unordered-containers
    , vector
    , wai
    , warp
  exposed-modules:
      Lomake
      Lomake.PDF
      Lomake.Pretty
      SatO.AJK.Lomake
      SatO.AJK.Lomake.Asuntohaku
      SatO.AJK.Lomake.Classes
      SatO.AJK.Lomake.Huoltoilmoitus
      SatO.AJK.Lomake.LongText
      SatO.AJK.Lomake.Palaute
      SatO.AJK.Lomake.Sisainen
      Singleton.Bool
  other-modules:
      Paths_ajk_lomake
  default-language: Haskell2010

executable ajk-lomake-server
  main-is: Main.hs
  hs-source-dirs:
      srv
  ghc-options: -Wall -threaded
  build-depends:
      base
    , ajk-lomake
  default-language: Haskell2010
