cabal-version:      2.4
name:               ajk-lomake
version:            0
synopsis:           AJK form
description:        Jee jee jee
category:           Web
homepage:           https://github.com/osakunta/ajk-lomake#readme
bug-reports:        https://github.com/osakunta/ajk-lomake/issues
author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
tested-with:        GHC ==8.4.4
extra-source-files:
  README.md
  foundation-6/css/foundation.min.css
  style.css

source-repository head
  type:     git
  location: https://github.com/osakunta/ajk-lomake

library
  default-language: Haskell2010
  hs-source-dirs:   src
  ghc-options:      -Wall

  build-depends:
    , aeson
    , aeson-compat
    , base                  ^>=4.11.1.0
    , base-compat
    , base16-bytestring
    , base64-bytestring
    , bifunctors
    , blaze-html
    , bytestring
    , containers
    , cryptohash-sha1
    , either                ^>=5
    , file-embed
    , futurice-prelude
    , generics-sop
    , HPDF                  ^>=1.4.10
    , http-api-data
    , http-client
    , http-client-tls
    , http-types
    , lens
    , lucid
    , markdown
    , mtl
    , pretty
    , process-extras
    , reflection
    , semigroups
    , sendgrid-v3
    , servant
    , servant-lucid
    , servant-multipart
    , servant-server
    , singleton-bool
    , stm
    , tagged
    , text
    , time
    , transformers
    , unordered-containers
    , vector
    , wai
    , warp

  exposed-modules:
    Lomake
    Lomake.Digest
    Lomake.PDF
    Lomake.Pretty
    SatO.AJK.Lomake
    SatO.AJK.Lomake.Asuntohaku
    SatO.AJK.Lomake.Classes
    SatO.AJK.Lomake.Common
    SatO.AJK.Lomake.Huoltoilmoitus
    SatO.AJK.Lomake.LongText
    SatO.AJK.Lomake.Palaute
    SatO.AJK.Lomake.Sisainen
    SatO.AJK.Lomake.Uusinta

executable ajk-lomake-server
  default-language: Haskell2010
  main-is:          Main.hs
  hs-source-dirs:   srv
  ghc-options:      -Wall -threaded
  build-depends:
    , ajk-lomake
    , base
